# Knowledge-Graph

./: .env  .env.example  README.md  main_ingest.py  pyproject.toml  query_for_humans.py  requirement.txt
rules_data/: rule.txt  rule_01.txt  rule_02_updated.txt  rule_03.txt
src/: config.py
src/api/: app.py
src/knowledge_graph/: populator.py  querier.py
src/llm_extractor/: extractor.py
